--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://rahulberastd2002:Rahul111@buy-bye.azwzw.mongodb.net/?retryWrites=true&w=majority&appName=Buy-Bye
-PORT=9000
+PORT=8080
+JWT_SECRET_KEY=rahulbera321isagood678guy98
